[package]
name = "my-webgl-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
speedy2d = "1.3.1"
log = "0.4"
console_error_panic_hook = "0.1.6"
serde = { version = "1.0", features = ["derive"] }
serde_closure = "0.3"
pof-earth-downloader = { path = "../downloader", version = "0.1.0"}

wasm-logger = "0.2"
wasm-bindgen = "0.2.74"
wasm-bindgen-futures = "0.4.26"

js-sys = "0.3.53"

[dependencies.web-sys]
version = "0.3.53"
features = ["DedicatedWorkerGlobalScope"]
